BATON-84 feature: WebSocket 채팅 송수신 및 읽음 처리 구현 (#69)
* BATON-84 feature: WebSocket 채팅 송수신 및 읽음 처리 구현

* chore: AI 코드 리뷰 반영

* test: 채팅 메시지 테스트 코드 작성